--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "homepage": "http://1ms.jp/",
     "type": "library",
     "require": {
-        "php": ">=5.4.0",
+        "php": ">=8.1.0",
         "ext-pdo": "*",
         "symfony/console": "~2.5.0",
         "symfony/finder": "~2.5.0",
@@ -14,7 +14,11 @@
     "require-dev": {
         "phpunit/phpunit": "4.2.*",
         "phake/phake": "v1.0.3",
-        "hamcrest/hamcrest-php": "1.2.0"
+        "hamcrest/hamcrest-php": "1.2.0",
+        "phpstan/phpstan": "^1.11",
+        "squizlabs/php_codesniffer": "^3.10",
+        "phpmd/phpmd": "^2.15",
+        "friendsofphp/php-cs-fixer": "^1.11"
     },
     "suggest": {
         "ext-pdo-mysql": "In order to use ikou with MySQL databases.",
@@ -31,5 +35,11 @@
     "autoload": {
         "psr-0": { "Dbup": "src/" }
     },
-    "bin": ["dbup"]
+    "bin": ["dbup"],
+    "scripts": {
+        "phpstan" : "vendor/bin/phpstan analyse -c phpstan.neon --memory-limit=-1",
+        "phpcs" : "vendor/bin/phpcs --standard=phpcs.xml --no-cache -s -n --file-list=phpcs.list",
+        "phpcbf" : "vendor/bin/phpcbf --standard=PSR12 --file-list=phpcs.list",
+        "phpmd" : "vendor/bin/phpmd --ignore-violations-on-exit src,dbup text phpmd.xml"
+    }
 }
