--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,9 @@
     "require": {
         "php": ">=8.1.0",
         "ext-pdo": "*",
-        "symfony/console": "~2.5.0",
-        "symfony/finder": "~2.5.0",
-        "symfony/event-dispatcher": "~2.5.0"
+        "symfony/console": "^3.2",
+        "symfony/finder": "^7.0",
+        "symfony/event-dispatcher": "^3.2"
     },
     "require-dev": {
         "phpunit/phpunit": "4.2.*",
@@ -17,8 +17,7 @@
         "hamcrest/hamcrest-php": "1.2.0",
         "phpstan/phpstan": "^1.11",
         "squizlabs/php_codesniffer": "^3.10",
-        "phpmd/phpmd": "^2.15",
-        "friendsofphp/php-cs-fixer": "^1.11"
+        "phpmd/phpmd": "^2.15"
     },
     "suggest": {
         "ext-pdo-mysql": "In order to use ikou with MySQL databases.",
