--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,9 @@
         "symfony/event-dispatcher": "^3.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.2.*",
-        "phake/phake": "v1.0.3",
-        "hamcrest/hamcrest-php": "1.2.0",
+        "phpunit/phpunit": "^11.1",
+        "phake/phake": "^4.5",
+        "hamcrest/hamcrest-php": "^2.0",
         "phpstan/phpstan": "^1.11",
         "squizlabs/php_codesniffer": "^3.10",
         "phpmd/phpmd": "^2.15"
@@ -32,13 +32,19 @@
         }
     ],
     "autoload": {
-        "psr-0": { "Dbup": "src/" }
+        "psr-0": {
+            "Dbup": [
+                "src/",
+                "tests/"
+            ]
+        }
     },
     "bin": ["dbup"],
     "scripts": {
         "phpstan" : "vendor/bin/phpstan analyse -c phpstan.neon --memory-limit=-1",
         "phpcs" : "vendor/bin/phpcs --standard=phpcs.xml --no-cache -s -n --file-list=phpcs.list",
         "phpcbf" : "vendor/bin/phpcbf --standard=PSR12 --file-list=phpcs.list",
-        "phpmd" : "vendor/bin/phpmd --ignore-violations-on-exit src,dbup text phpmd.xml"
+        "phpmd" : "vendor/bin/phpmd --ignore-violations-on-exit src,dbup text phpmd.xml",
+        "phpunit" : "vendor/bin/phpunit  --bootstrap vendor/autoload.php --colors tests"
     }
 }
