--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,19 @@ jobs:
         uses: actions/checkout@v4.1.6
       - name: Composer (php-actions)
         uses: php-actions/composer@v6
-      - name: PHPUnit (php-actions)
-        uses: php-actions/phpunit@v4
+      - name: PHP Static Analysis
+        uses: php-actions/composer@v6
         with:
-          configuration: phpunit.xml
+          command: phpstan
+      - name: PHP Check style
+        uses: php-actions/composer@v6
+        with:
+          command: phpcs
+      - name: PHP Mess detector
+        uses: php-actions/composer@v6
+        with:
+          command: phpmd
+      - name: PHP Unit tests
+        uses: php-actions/composer@v6
+        with:
+          command: phpunit
