--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "brtriver/dbup",
+    "version": "0.6",
     "description": "simple migration tool with PDO",
     "keywords": ["migration", "database"],
     "homepage": "http://1ms.jp/",
